Use flex layout so the scroller works correctly with floating-ui
Also removed extra spacing on the bottom due to inline block

--- a/wwwroot/web-components/scroller/scroller.scss
+++ b/wwwroot/web-components/scroller/scroller.scss
@@ -1,8 +1,7 @@
 @import "../_vars.scss";
 
 :host {
-    display: grid;
-    grid-template-rows: 1fr;
+    display: flex;
     position: relative;
     --vi-scroller-thumb-color: #888;
     --vi-scroller-thumb-hover-color: #777;
@@ -25,9 +24,14 @@
         -ms-overflow-style: none;
         scrollbar-width: none;
         -webkit-overflow-scrolling: touch;
+        line-height: 0;
 
         &::-webkit-scrollbar {
             display: none;
+        }
+
+        .content {
+            line-height: normal;
         }
     }
 
